Fixed video not being centered behind hero

--- a/css/index.css
+++ b/css/index.css
@@ -52,6 +52,7 @@ body {
   bottom: 0;
   left: 0;
   max-height: 100%;
+  margin: 0 auto;
   background-color: #000;
 }
 .hero h1, .hero p {
