--- a/css/style.scss
+++ b/css/style.scss
@@ -35,6 +35,7 @@ body {
   video {
     @include pseudo-after(0, 0, 0, 0);
     max-height: 100%;
+    margin: 0 auto;
     background-color: #000;
   }
   
